Improved overall layout by getting rid of all scroll bars (entities and constraints tables will get scrollbars when there is not enough space to display everything on screen); issue 020 with the top button bar still exists

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,21 +10,11 @@
   box-sizing: border-box;
 }
 
-.mainview {
-  height: 90vh !important;
-}
-
 /* Use with the OcTest.tsx component. */
 .viewport {
   margin-top: 25px;
   width: 500px;
   height: 500px;
-}
-
-.sketcherview {
-  /* if this gets to high the page gets a scrollbar
-     not the best solution, but for now it works */
-  height: 87vh !important;
 }
 
 /* Apply a margin to all primary buttons */
